# cruz_roja

./: .gitignore  README.md  main.py  mapa_cruz_roja_v2.html  mapa_servicios.html  pyproject.toml
chatbot/: README.md  bot.py  test_data_manager.py
chatbot/data/: db_simulada.json
chatbot/services/: data_manager.py
core/: README.md  config.py  database.py  main.py
core/analisis/: clean_todos_concentrados.py  extractor_2022.py  extractor_2023_concentrado.py  extractor_2023_sep.py  extractor_2024_concentrado.py  extractor_2025.py  extractor_2026.py  extractor_test.py  extractor_todos_concentrados.py  organizador.py
core/analisis/data/: bitacora_todos_concentrado.csv  dataset_feb_cruz_roja.csv  direcciones_unicas.csv  geocache.json  mapa_cruz_roja.html
core/analisis/data/2022/: bitacora_2022-2023.csv  bitacora_2022_concentrado.csv  datos_limpios.csv
core/analisis/data/2023/: bitacora_2023_concentrado.csv  bitacora_2023_dic.csv  bitacora_2023_nov.csv  bitacora_2023_oct.csv  bitacora_2023_sep.csv  datos_limpios_2023_sep.csv
core/analisis/data/2024/: bitacora_2024_abr.csv  bitacora_2024_ago.csv  bitacora_2024_concentrado.csv  bitacora_2024_dic.csv  bitacora_2024_ene.csv  bitacora_2024_feb.csv  bitacora_2024_jul.csv  bitacora_2024_jun.csv  bitacora_2024_mar.csv  bitacora_2024_may.csv  bitacora_2024_nov.csv  bitacora_2024_oct.csv  bitacora_2024_sep.csv
core/analisis/data/2025/: BSU-ABR25.csv  BSU-AGO25.csv  BSU-DIC25.csv  BSU-ENE25.csv  BSU-FEB25.csv  BSU-JUL25.csv  (+7 more)
core/test_bd/: test_conexion_bd.py
digitalizacion/: README.md  ajuste_imagen  ocr_extractor.py
(+1 files in other folders)
